Stabilize system prompt prefix for LLM cache reuse
Providers that offer prompt caching (OpenAI, OpenRouter-via-Anthropic,
OpenRouter-via-Gemini, DeepSeek, etc.) key on a byte-stable prefix. Four
sources of instability were killing every cache hit before it could form:

1. SystemPromptAssembler embedded the current time at per-second
   resolution, so every request within the same conversation had a
   unique system prompt. Dropped to date-only and moved the recalled
   memories block to the tail so only the per-turn-variable section
   sits past the cacheable prefix.
2. ToolRegistry.publish used Map.copyOf, which returns an immutable map
   with unspecified iteration order. Tool definitions in the request
   body would reshuffle across registerAll() re-runs (triggered by the
   Settings UI tool toggles), silently busting open conversation caches.
   Publish via an unmodifiable LinkedHashMap instead.
3. SkillLoader.loadSkillsFromDisk returned skills in filesystem
   iteration order, which is not stable across cache refreshes or
   across filesystems. Sort by name before returning.
4. Usage record gained a cachedTokens field, wired through the OpenAI-
   compat path (usage.prompt_tokens_details.cached_tokens) in both the
   non-streaming deserializer and the streaming augmentChunkUsage helper
   that re-scans raw chunk JSON for nested usage fields. AgentRunner now
   surfaces cached tokens in the llm event log line and the frontend
   usage JSON so cache hits are observable.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>